# fastapi-inventory

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_inventory.py
backend/app/: config.py  database.py  main.py
backend/app/api/: inventory.py  router.py
backend/app/models/: inventory.py
backend/app/schemas/: __init__.py  inventory.py
backend/app/services/: inventory.py
backend/app/tasks/: celery_app.py  inventory.py
backend/app/utils/: __init__.py  normalization.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: inventory.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: inventory.ts
frontend/src/components/: AddItemForm.tsx  AdjustQuantityModal.tsx  DeleteConfirmModal.tsx  InventoryTable.tsx
frontend/src/hooks/: useInventory.ts
frontend/src/types/: inventory.ts
nginx/: nginx.dev.conf
